components/carousel/carousel.scss
.control-arrow {
    position: absolute;
    top: 100% !important;
    background: none;
    z-index: 999 !important;
    border: 0;
    border-radius: 100%;
    padding: .2rem 1rem !important;
    height: fit-content !important;
    transform: translate(0, -125%);
    border: 5px double var(--mainBorderColor) !important;
    background-color: var(--mainLinkColor) !important;
}

.carousel {
    height: 100vh !important;
}

.skills-view {
    &::before {
        content: 'Skills.';
        top: 0;
        left: -4rem;
        position: fixed;
        font-size: 10rem;
        font-weight: bolder;
        z-index: -999;
        opacity: 3%;
        writing-mode: vertical-rl;
        -webkit-writing-mode: vertical-rl;
        letter-spacing: 10px;
    }
}



@media screen and (min-width: 768px) {

    //2xl
    .control-arrow {
        // top: 50% !important;
        padding: .4rem 1rem !important;
    }
}

@media screen and (min-width: 992px) {
    .skills-view {
        &::before {
            display: none;
        }

        &::after {
            content: 'Skills.';
            bottom: -9rem;
            left: 0;
            position: fixed;
            font-size: 25rem;
            z-index: -999;
            opacity: 3%;
            letter-spacing: 10px;
            font-weight: bolder;
        }
    }
}

